# CodingChallenge

./: README.md  makefile
.github/workflows/: api.yml  checks.yml  web.yml
api/: .gitignore  .pylintrc  README.md  makefile  pyproject.toml
api/src/: main.py  system_state.py  word_counter.py
api/tests/: test_main.py
web/: .eslintrc.json  README.md  makefile  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
web/src/api/: index.ts
web/src/components/: WordCounter.tsx
web/src/components/WordCounter/: index.tsx  style.css
