[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Kevin Ruan Soares <contato@kevinrsoares.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"
pylint = "^3.2.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"